@@ -1,9 +1,6 @@
 dependencies {
-    implementation project(':cache-common')
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.hazelcast:hazelcast-spring'
-}
-
-bootRun {
-    jvmArgs = ['--illegal-access=warn']
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
